--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,7 @@ html {
 body {
     font-size: 1.6rem;
     font-family: "Poppins", sans-serif;
+    background-color: #fffaf5;
 }
 /* Common */
 
@@ -71,6 +72,7 @@ button {
 }
 .navbar__list {
     display: flex;
+    align-items: center;
 }
 
 .navbar__link,
@@ -83,8 +85,17 @@ button {
 }
 
 .navbar__link:hover {
-    text-shadow: 1px 0 0 0 currentColor;
+    font-weight: 700;
     color: var(--primary-color);
+}
+
+.navbar__link::before {
+    content: attr(title);
+    display: block;
+    font-weight: 600;
+    height: 0;
+    overflow: hidden;
+    visibility: hidden;
 }
 .header-action {
 }
@@ -92,4 +103,66 @@ button {
 .header-action__btn {
     min-width: 118px;
     --height: 50px;
+}
+
+/* Hero */
+
+.hero {
+    margin-top: 74px;
+}
+
+.hero__inner {
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+}
+
+.hero-media {
+    display: flex;
+    position: relative;
+}
+
+.hero-img-wrap {
+    width: 388px;
+    height: 488px;
+    background: #fe997b;
+    border-radius: 16px;
+    border: 3px solid #fff;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    position: relative;
+}
+
+.hero-media__img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 16px;
+}
+
+.hero-img__decor {
+    position: absolute;
+}
+
+.hero-img__decor-left {
+    bottom: 10px;
+    left: -58px;
+    z-index: -1;
+}
+
+.hero-img__decor-right {
+    top: 16px;
+    right: -42px;
+    z-index: -1;
+}
+
+.hero-img-small {
+    width: 186px;
+    height: 244px;
+    background-color: #faa7ad;
+    border: 2px solid #fbe0e2;
+    align-self: flex-end;
+    position: absolute;
+    bottom: -58px;
+    right: -163px;
 }
