--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,11 +51,23 @@ button {
     height: var(--height);
     line-height: var(--height);
     font-weight: 600;
-    font-size: 1.4rem;
     text-align: center;
     color: var(--primary-color);
     border: 1px solid rgb(0, 9, 88, 0.7);
-    border-radius: 25px;
+    border-radius: 999px;
+}
+
+.section-desc__16 {
+    font-weight: 400;
+    line-height: 1.88;
+    color: #656689;
+}
+
+.section-desc__14 {
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.71;
+    color: #656689;
 }
 
 /* Header   */
@@ -103,6 +115,7 @@ button {
 .header-action__btn {
     min-width: 118px;
     --height: 50px;
+    font-size: 1.4rem;
 }
 
 /* Hero */
@@ -114,12 +127,14 @@ button {
 .hero__inner {
     display: flex;
     align-items: center;
+    column-gap: 120px;
     /* justify-content: center; */
 }
 
 .hero-media {
     display: flex;
     position: relative;
+    padding-bottom: 94px;
 }
 
 .hero-img-wrap {
@@ -163,4 +178,114 @@ button {
     border: 2px solid #fbe0e2;
     align-self: flex-end;
     margin: 0 0 -58px -24px;
+}
+
+.hero-list {
+    width: 250px;
+    height: 156px;
+    background-color: #fff;
+    box-shadow: -17px 14px 68px -4px rgba(207, 174, 132, 0.25);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 0px;
+    left: 129px;
+}
+
+.hero-list-item {
+    display: flex;
+    padding: 18px 14px;
+    align-items: center;
+    column-gap: 9px;
+}
+
+.hero-item-media {
+    width: 40px;
+    height: 40px;
+    background-color: #fec23f;
+    border-radius: 10px;
+}
+
+.hero-item__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.skeleton {
+    margin-top: 7px;
+    --width: 118px;
+    width: var(--width);
+    height: 4px;
+    background: #000958;
+    opacity: 0.08;
+    border-radius: 10px;
+}
+
+.separation {
+    width: 222px;
+    height: 0px;
+    border: 2px solid #f2f2f2;
+    align-self: center;
+}
+
+.hero-list .hero-list-item:nth-child(3) .hero-item-media {
+    background-color: #c6e2fa;
+}
+
+.hero__title {
+    font-weight: 800;
+    font-size: 6.6rem;
+    line-height: 1.15;
+    color: var(--primary-color);
+}
+
+.hero__desc {
+    margin-top: 24px;
+    width: 391px;
+}
+
+.hero__row {
+    margin-top: 38px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    column-gap: 24px;
+}
+
+.hero-cta__btn {
+    --height: 60px;
+    background: #ff5b2e;
+    box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
+    border: none;
+    color: #fff;
+    font-size: 1.6rem;
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    padding: 0 30px;
+}
+
+.hero-cta__btn span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #fffaf5;
+    box-shadow: 4px 3px 10px -1px rgba(191, 41, 0, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-cta__btn .hero__arrow {
+    width: 5px;
+    height: 5px;
+}
+
+.hero-cta__link {
+    font-weight: 500;
+    text-decoration-line: underline;
+    color: var(--primary-color);
 }
