--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -307,6 +307,7 @@ button {
     grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-content: space-around;
+    row-gap: 146px;
 }
 
 .about__label {
@@ -429,4 +430,113 @@ button {
     position: absolute;
     top: 157px;
     right: -83px;
+}
+
+.about__img__wrap--bottom {
+    margin-left: 0;
+    width: 458px;
+    position: relative;
+}
+.about__img__wrap--bottom::after {
+    height: 500px;
+    background: linear-gradient(180deg, #c6e2fa 0%, #94c2ea 100%);
+    border: 2px solid #ffffff;
+    box-shadow: 0px 17px 77px -8px rgba(190, 165, 139, 0.17);
+    border-radius: 18px;
+}
+
+.about__decor__bottom--img {
+    position: absolute;
+}
+
+.about__decor__bottom .about__decor__bottom--img:nth-child(1) {
+    top: 13px;
+    right: 64px;
+}
+
+.about__decor__bottom .about__decor__bottom--img:nth-child(2) {
+    top: -24px;
+    right: 13px;
+}
+.about__decor__bottom .about__decor__bottom--img:nth-child(3) {
+    top: 33px;
+    right: -21px;
+}
+.about__decor__bottom .about__decor__bottom--img:nth-child(4) {
+    top: 260px;
+    right: -33px;
+}
+.about__decor__bottom .about__decor__bottom--img:nth-child(5) {
+    top: 336px;
+    right: 19px;
+}
+.about__decor__bottom .about__decor__bottom--img:nth-child(6) {
+    bottom: -40px;
+    right: -24px;
+}
+.about__decor__bottom .about__decor__bottom--img:nth-child(7) {
+    bottom: -47px;
+    right: -32.6px;
+}
+.about__decor__bottom .about__decor__bottom--img:nth-child(8) {
+    bottom: -54.8px;
+    right: -42px;
+}
+
+.about__desc--bottom {
+    margin-top: 24px;
+    width: 511px;
+}
+
+.about__tab {
+    margin-top: 51px;
+}
+.about__tab__list {
+    display: inline-flex;
+    column-gap: 56px;
+    position: relative;
+}
+
+.about__tab__list::after,
+.about__tab__item--active::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    opacity: 0.07;
+    background-color: #ff5b2e;
+}
+
+.about__tab__item--active::after {
+    background-color: #ff5b2e;
+    opacity: 1;
+    width: 95px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.about__tab__item {
+    display: flex;
+    align-items: center;
+    position: relative;
+    padding-bottom: 14px;
+}
+
+.about__tab__item a {
+    display: contents;
+    font-family: Sora, sans-serif;
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1;
+    color: #48496a;
+}
+
+.about__item--icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
 }
