--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,7 @@
 
 :root {
     --primary-color: #000958;
+    --second-color: #ff5d31;
 }
 
 html {
@@ -63,11 +64,27 @@ button {
     color: #656689;
 }
 
+.section__12 {
+    font-family: Sora, sans-serif;
+    font-size: 1.2rem;
+    line-height: 1;
+    color: #34396a;
+}
+
 .section-desc__14 {
     font-weight: 400;
     font-size: 1.4rem;
     line-height: 1.71;
     color: #656689;
+}
+
+.section-desc__22 {
+    font-family: Sora, sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 2.2rem;
+    line-height: 1;
+    color: var(--primary-color);
 }
 
 .section-heading {
@@ -76,6 +93,25 @@ button {
     font-size: 5.2rem;
     line-height: 1.19;
     color: var(--primary-color);
+}
+
+.img__wrap {
+    --width: 494px;
+    width: var(--width);
+    position: relative;
+    display: block;
+    margin-left: auto;
+}
+
+.img__wrap::after {
+    content: "";
+    display: block;
+    inset: auto 0 0 0;
+    height: 336px;
+    position: absolute;
+    background: linear-gradient(180deg, #fce0ef 0%, #fac3d1 100%);
+    border-radius: 16px;
+    z-index: -1;
 }
 /* Header   */
 
@@ -350,7 +386,7 @@ button {
     display: inline-block;
     width: 24px;
     height: 24px;
-    background: #ff5d31;
+    background: var(--second-color);
     box-shadow: 0px 4px 15px -3px rgba(255, 93, 49, 0.69);
     border-radius: 4px;
     margin-right: 10px;
@@ -399,24 +435,6 @@ button {
     position: absolute;
     top: -40px;
     right: -30px;
-}
-
-.about__img__wrap {
-    width: 494px;
-    position: relative;
-    display: block;
-    margin-left: auto;
-}
-
-.about__img__wrap::after {
-    content: "";
-    display: block;
-    inset: auto 0 0 0;
-    height: 336px;
-    position: absolute;
-    background: linear-gradient(180deg, #fce0ef 0%, #fac3d1 100%);
-    border-radius: 16px;
-    z-index: -1;
 }
 
 .about__img {
@@ -539,4 +557,114 @@ button {
     width: 20px;
     height: 20px;
     margin-right: 10px;
+}
+.about__tab__desc {
+    margin-top: 36px;
+    width: 391px;
+    display: none;
+}
+
+.about__tab__desc--active {
+    display: block;
+}
+
+.about__tab--link {
+    margin-top: 32px;
+    display: inline-block;
+    font-weight: 500;
+    line-height: 1;
+    color: var(--second-color);
+    position: relative;
+    padding-bottom: 5px;
+}
+
+.about__tab--link::after {
+    content: "";
+    display: inline-block;
+    width: 100%;
+    height: 1.5px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: var(--second-color);
+}
+
+/* service */
+.service {
+    margin-top: 190px;
+    padding: 68px 0 100px;
+    background: #fff6ed;
+}
+
+.service__row {
+    text-align: center;
+}
+.service-label {
+    font-family: Sora, sans-serif;
+    font-weight: 600;
+    line-height: 1;
+    color: #5e6085;
+    padding-bottom: 15px;
+}
+.service__inner {
+    margin-top: 71px;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    column-gap: 64px;
+}
+.serivce__column {
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+}
+
+.service__card {
+    max-width: 294px;
+    padding: 30px 22px 30px 28px;
+    background: #fff;
+    border: 2px solid rgba(255, 188, 122, 0.26);
+    border-radius: 10px;
+}
+
+.service__card__title {
+    display: flex;
+    align-items: center;
+    column-gap: 12px;
+}
+
+.service__card__title::before {
+    content: "";
+    display: inline-block;
+    width: 2px;
+    height: 22px;
+    border-radius: 1px;
+    background: #ff5b2e;
+}
+
+.service__card__desc {
+    margin-top: 18px;
+    width: 244px;
+}
+
+.service__card__link {
+    display: inline-flex;
+    margin-top: 24px;
+    align-items: center;
+    column-gap: 6px;
+}
+
+.service__img__warp {
+    position: relative;
+}
+
+.service__img {
+    --width: 440px;
+}
+
+.service__img__wrap::after {
+    width: 410px;
+    height: 350px;
+    background: linear-gradient(180deg, #9df1fb 0%, #73d0db 108.14%);
+    border-radius: 10px;
+    z-index: -1;
 }
