--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -693,3 +693,134 @@ button {
     border: 1px solid var(--third-color);
     box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
 }
+
+/* Staff */
+.staff {
+    padding: 130px 0;
+}
+
+.staff-row {
+    text-align: center;
+}
+
+.staff__label {
+    font-family: Sora, sans-serif;
+    font-weight: 600;
+    color: #5e6085;
+}
+
+.staff__heading {
+    margin-top: 15px;
+}
+
+.staff-list {
+    margin-top: 45px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 35px;
+}
+
+.staff__item-wrap {
+    max-width: 234px;
+    position: relative;
+    margin: 0 auto;
+}
+
+.staff__item-wrap::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 94%;
+    border-radius: 130px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.staff__item:nth-child(1) .staff__item-wrap::before {
+    background: linear-gradient(180deg, #90ccff 0%, #59a8eb 95.96%);
+}
+
+.staff__item:nth-child(2) .staff__item-wrap::before {
+    background: linear-gradient(180deg, #ff997e 0%, #f3752e 100%);
+}
+
+.staff__item:nth-child(3) .staff__item-wrap::before {
+    background: linear-gradient(180deg, #fabf3e 0%, #ffa14a 100%);
+}
+
+.staff__item:nth-child(4) .staff__item-wrap::before {
+    background: linear-gradient(180deg, #5bd6e2 0%, #00a7cc 100%);
+}
+
+.staff__item-wrap::after {
+    content: "";
+    display: block;
+    width: calc(100% + 36px);
+    height: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: 100%;
+}
+
+.staff__item:nth-child(1) .staff__item-wrap::after {
+    background-image: url(../img/staff-decor-01.svg);
+}
+.staff__item:nth-child(2) .staff__item-wrap::after {
+    background-image: url(../img/staff-decor-02.svg);
+}
+.staff__item:nth-child(3) .staff__item-wrap::after {
+    background-image: url(../img/staff-decor-03.svg);
+}
+.staff__item:nth-child(4) .staff__item-wrap::after {
+    background-image: url(../img/staff-decor-04.svg);
+}
+
+.staff__item:nth-child(even) .staff__item-wrap::after {
+    background-position: 0 16px;
+}
+
+.staff__item__img {
+    display: block;
+    width: 100%;
+
+    border-radius: 130px;
+    position: relative;
+    z-index: 1;
+}
+
+.staff__item__position {
+    margin-top: 29px;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1;
+    text-align: center;
+    color: #656689;
+}
+
+.staff__item__name {
+    margin-top: 14px;
+    font-family: Sora, sans-serif;
+    font-weight: 600;
+    font-size: 2.2rem;
+    line-height: 1;
+    color: var(--primary-color);
+    text-align: center;
+}
+
+.staff-cta {
+    margin-top: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.staff-cta__link {
+    width: 193px;
+    color: var(--third-color);
+    border: 1px solid rgb(249, 87, 47, 0.6);
+}
