--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -824,3 +824,253 @@ button {
     color: var(--third-color);
     border: 1px solid rgb(249, 87, 47, 0.6);
 }
+
+/* Price */
+.price {
+    padding: 86px 0;
+    background: #fff6ed;
+}
+
+.price-row {
+    text-align: center;
+}
+
+.price__desc {
+    width: 710px;
+    margin: 24px auto 0;
+}
+
+.price-switch-wrap {
+    margin: 38px auto;
+}
+
+.price-switch__label {
+    margin: 0 auto;
+    width: 276px;
+    height: 56px;
+    padding: 0 40px;
+    color: #ff5b2e;
+    border: 1px solid rgb(249, 87, 47, 0.6);
+    border-radius: 99px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    user-select: none;
+}
+
+.price-switch__label::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 140px;
+    height: 100%;
+    background: #ff5b2e;
+    border-radius: inherit;
+}
+
+.price-switch__input:checked + .price-switch__label::before {
+    left: auto;
+    right: 0;
+    width: 131px;
+}
+
+.price-switch__input:not(:checked)
+    + .price-switch__label
+    .price-switch__value:nth-of-type(2),
+.price-switch__input:checked
+    + .price-switch__label
+    .price-switch__value:nth-of-type(1) {
+    color: var(--third-color);
+}
+
+.price-switch__value {
+    position: relative;
+    z-index: 1;
+    color: #fff;
+}
+
+.price-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 44px;
+}
+
+.price__item {
+    padding: 30px 28px 43px;
+    background: #ffffff;
+    border-radius: 20px;
+}
+
+.price__item__label {
+    font-weight: 400;
+    font-size: 1.2rem;
+    line-height: 1;
+    color: var(--third-color);
+}
+.price__item__title {
+    margin: 8px 0 24px;
+
+    font-family: Sora, sans-serif;
+    font-weight: 600;
+    font-size: 1.8;
+    line-height: 1;
+    color: #3f4065;
+}
+
+.price__item__price-value {
+    font-family: Sora, sans-serif;
+    font-weight: 700;
+    font-size: 3.3rem;
+    line-height: 1.03;
+    color: var(--primary-color);
+}
+
+.price__item--link {
+    display: block;
+    margin-top: 22px;
+    width: 100%;
+    --height: 44px;
+    color: var(--third-color);
+    border: 1px solid rgba(255, 91, 46, 0.6);
+    background: transparent;
+}
+
+.price__item--link:hover {
+    color: #fff;
+    background-color: #ff5b2e;
+}
+
+.price__item-checklist {
+    margin-top: 24px;
+}
+
+.price__item-checklist__item {
+    margin-top: 18px;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1;
+    color: #656689;
+}
+
+.price__item-checklist__item span::before {
+    content: url(../icon/price-check.svg);
+    margin-right: 14px;
+}
+
+/* Review */
+.review {
+    padding: 103px 0 53px;
+}
+
+.review-inner {
+    display: flex;
+    align-items: center;
+    column-gap: 44px;
+}
+
+.review__control {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 54px;
+    height: 54px;
+    background: none;
+    border: 1.5px solid #ffd1c4;
+    border-radius: 50%;
+    color: var(--third-color);
+}
+
+.review__control:hover {
+    color: #fff;
+    background: var(--third-color);
+    border-color: var(--third-color);
+    box-shadow: 0px 5px 27px rgba(255, 91, 46, 0.3);
+    cursor: pointer;
+}
+
+.review-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 115px;
+}
+
+.review__media {
+    margin-top: -50px;
+    flex-shrink: 0;
+    width: 274px;
+    border-radius: 137px;
+    position: relative;
+}
+
+.review__media::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 82%;
+    inset: auto 0 0 0;
+    background: #ffda54;
+    border-radius: inherit;
+}
+
+.review__media__img {
+    display: block;
+    width: 100%;
+    border-radius: inherit;
+    position: relative;
+    z-index: 1;
+}
+
+.review__desc {
+    width: 553px;
+    margin-top: 24px;
+    font-weight: 400;
+    font-size: 1.8rem;
+    line-height: 1.56;
+    color: #000;
+}
+
+.review__author {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 34px;
+    font-family: Sora, sans-serif;
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1;
+    color: #282828;
+    position: relative;
+}
+
+.review__author::before {
+    content: "";
+    display: inline-block;
+    margin-right: 8px;
+    width: 20px;
+    height: 2px;
+    border: 1px;
+    background-color: #000;
+}
+
+.review-dots {
+    margin-top: 56px;
+    display: flex;
+    justify-content: center;
+    column-gap: 8px;
+}
+
+.review__dot {
+    width: 8px;
+    height: 8px;
+    border-radius: 4px;
+    border: 1px solid var(--third-color);
+}
+
+.review__dot--active {
+    background-color: var(--third-color);
+    width: 24px;
+}
